<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="phone">650-555-5555</string>
    <string name="webpage">www.udacity.com</string>
    <string name="address">2465 Latham St, Mountain View, CA 94043</string>
    <string name="company_name">Udacity</string>
    <string name="hiring">We\'re hiring!</string>
    <string name="call">For more information call </string>
    <string name="check">You can also check our webpage </string>
    <string name="visit">Or visit us at</string>
    <string name="cat">Our working environment looks like this:</string>
</resources>
